<!--
  ~ Copyright (c) 2023. Beata Bujalska<beta.bujalska@gmail.com>
  ~ All rights reserved.
  -->

<resources>
    <string name="app_name">MovieApp</string>
    <string name="title">Title</string>
    <string name="movie_order_popular">Popular</string>
    <string name="movie_order_top_rated">Top Rated</string>
    <string name="movie_order_upcoming">Upcoming</string>
    <string name="movie_order_now_playing">Now playing</string>
    <string name="saved_order_key">saved_order_key</string>
    <string name="tv_series_label">TV series</string>
    <string name="home">Home</string>
    <string name="movie_details_label">Details</string>
    <string name="search">Search</string>
    <string name="episodes_count">%s Episodes</string>
    <string name="tv_card_transition_name">tv_card_%1$s</string>
    <string name="tv_card_detail_transition_name">tv_card_detail</string>
    <string name="movies_title">Movies</string>
    <string name="tv_order_popular">Popular</string>
    <string name="tv_order_top_rated">Top Rated</string>
    <string name="tv_order_airing_today">Airing Today</string>
    <string name="tv_order_on_the_air">On The Air</string>
    <string name="movie_card_transition_name">movie_card_%1$s</string>
    <string name="movie_card_detail_transition_name">movie_card_detail</string>
    <string name="episode_number">Episode %s</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="error">Error</string>
    <string name="retry_button_label">Retry</string>
    <string name="search_empty_state">Enter more than 3 characters to search.</string>
    <string name="search_empty_list_message">No result. Try adjusting your search to find what you are looking for.</string>
    <string name="tv_details_label">Details</string>
    <string name="search_movies_label">Search Movies</string>
    <string name="person_details_label">Person details</string>
    <string name="movies_label">Movies</string>
    <string name="search_tv_label">Search Tv Series</string>
    <string name="connection_error_message">Whoops! We\'re having difficulty connecting to the server. Check your connection or try again later.</string>
    <string name="season_hint_label">Season</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="person_details_birthday_label">Birth: %s</string>
    <string name="person_details_deathday_label">Death: %s</string>
    <string name="section_button_show_more">Show more</string>
    <string name="section_button_show_less">Show less</string>
    <string name="section_header_movie_cast">Acting</string>
    <string name="section_header_movie_crew">Participation in creation</string>
    <string name="filmography_unknown">unknown</string>
    <string name="movie_review_label">Movie reviews</string>
    <string name="reviews_button_label">Reviews</string>
    <string name="movie_reviews_empty_state">No result. List of movie reviews is empty.</string>
    <string name="tv_series_reviews_empty_state">No result. List of tv series reviews is empty.</string>
    <string name="account_label">Account</string>
    <string name="account_log_in_button">Log in</string>
    <string name="generic_error_message">Whoops, something went wrong! Please try again.</string>
    <string name="denied_login_message">Login failed. Please give the necessary permissions.</string>
    <string name="account_log_out_button">Log out</string>
    <string name="tv_series_details_favorite_error">An error occurred, the TV series could not be added to favorites.</string>
    <string name="tv_series_details_watchlist_error">An error occurred, the TV series could not be added to watchlist.</string>
    <string name="movie_details_favorite_error">An error occurred, the movie could not be added to favorites.</string>
    <string name="movie_details_watchlist_error">An error occurred, the movie could not be added to watchlist.</string>
    <string name="favorite_movies_empty_state_message">Add movie to favorite list.</string>
    <string name="movie_watchlist_empty_state_message">Add movie to watchlist.</string>
    <string name="favorite_tv_series_empty_state_message">Add tv series to favorite list.</string>
    <string name="tv_series_watchlist_empty_state_message">Add tv series to watchlist.</string>
    <string name="favorite_movies_section_header">Favorite movies</string>
    <string name="movie_watchlist_section_header">Movie watchlist</string>
    <string name="tv_series_watchlist_section_header">TV series watchlist</string>
    <string name="tv_series_reviews_label">TV series reviews</string>
    <string name="account_dialog_title">Account Details</string>
    <string name="bottom_nav_home_label">Home</string>
    <string name="bottom_nav_tv_series_label">TV Series</string>
    <string name="bottom_nav_account_label">Account</string>
    <string name="favorite_tv_series_section_header">Favorite tv series</string>
</resources>