<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.movieplayer.ui.movies.MovieViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:checkedChip="@+id/popular"
            app:layout_constraintBottom_toTopOf="@id/movieRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/popular"
                style="@style/ChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_order_popular" />

            <com.google.android.material.chip.Chip
                android:id="@+id/topRated"
                style="@style/ChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_order_top_rated" />

            <com.google.android.material.chip.Chip
                android:id="@+id/upcoming"
                style="@style/ChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_order_upcoming" />

            <com.google.android.material.chip.Chip
                android:id="@+id/nowPlaying"
                style="@style/ChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_order_now_playing" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:transitionGroup="true"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/errorView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/movie_item" />

        <LinearLayout
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieRecyclerView"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/connection_error_message"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                tools:text="Error" />

            <Button
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/retry_button_label" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>