<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.beti1205.movieapp.ui.movies.details.MovieDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="@string/movie_card_detail_transition_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                app:imageUrl="@{viewModel.selectedMovie.posterPath}"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@id/textContent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:srcCompat="@drawable/poster" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/imageView">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@{viewModel.selectedMovie.title}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorSecondary"
                    app:layout_constraintBottom_toTopOf="@id/releaseData"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/releaseData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@{viewModel.selectedMovie.releaseDate}"
                    android:textAppearance="?attr/textAppearanceCaption"
                    app:layout_constraintEnd_toStartOf="@+id/voteAverage"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    tools:text="2000" />

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="4dp"
                    app:layout_constraintEnd_toStartOf="@id/voteAverage"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:srcCompat="@drawable/ic_baseline_stars_24"
                    app:tint="?attr/colorSecondary" />

                <TextView
                    android:id="@+id/voteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@{viewModel.selectedMovie.votes}"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/releaseData"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    tools:text="3.0" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:paddingBottom="8dp"
                    android:text="@{viewModel.selectedMovie.overview}"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintTop_toBottomOf="@id/releaseData"
                    tools:text="About Movie" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/overview" />

                <TextView
                    android:id="@+id/cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/cast"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorSecondary"
                    android:visibility="@{!viewModel.hasError}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    tools:text="Title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/castRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="@{!viewModel.hasError}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cast"
                    app:listCastData="@{viewModel.cast}"
                    tools:listitem="@layout/cast_item" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/secondDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{!viewModel.hasError}"
                    app:layout_constraintTop_toBottomOf="@id/castRecyclerView" />

                <TextView
                    android:id="@+id/crew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/crew"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorSecondary"
                    android:visibility="@{!viewModel.hasError}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/secondDivider"
                    tools:text="Title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/crewRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="@{!viewModel.hasError}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/crew"
                    app:listCrewData="@{viewModel.crew}"
                    tools:listitem="@layout/crew_item" />

                <ImageView
                    android:id="@+id/emptyState"
                    style="@style/EmptyStateIcon"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:visibility="@{viewModel.hasError}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:srcCompat="@drawable/ic_baseline_broken_image_24" />

                <TextView
                    android:id="@+id/emptyStateMessage"
                    style="@style/EmptyStateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_error_message"
                    android:visibility="@{viewModel.hasError}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emptyState" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>